package com.umeng.ufp.core.domain.protobuf;

option java_package = "com.umeng.ufp.core.domain.protobuf";
option java_outer_classname = "UserActionLogProtos";

message UserActionLogEntry {
    optional string op_date = 1;
    optional string op_type = 2;
    optional string object_type = 3;
    optional int32 object_id = 4;
    optional bytes object_oldvalue = 5;
    optional bytes object_newvalue = 6;
    optional int32 user_id = 7;
    optional int32 operator_id = 8;
}
